--- a/mv_kecdf_frechet.ipynb
+++ b/mv_kecdf_frechet.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "jupyter nbconvert mv_kecdf_frechet.ipynb --to slides --post serve"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -489,7 +500,7 @@
     }
    },
    "source": [
-    "## The actual function calls...\n",
+    "## Comparing times and bandwidth choices\n",
     "\n",
     "Let's compare times and values for bandwidth selection for each method available in StatsModels, considering **4 dimensions** and **1000 samples**.\n",
     "\n",
@@ -618,6 +629,7 @@
     "\n",
     "\n",
     "* A bummer: no direct way to feed ranges of hyperparameters in order to constrain the search space!\n",
+    "\n",
     "    * They simply call scipy.optimize.fmin underneath.\n",
     "\n",
     "\n",
@@ -646,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -656,7 +668,8 @@
    "outputs": [],
    "source": [
     "def loo_likelihood(self, bw, func=lambda x: x):\n",
-    "    LOO = LeaveOneOut(self.data) #<- iterator over leave-one-out of the data\n",
+    "\n",
+    "    LOO = LeaveOneOut(self.data) #<- iterator for a leave-one-out over the data\n",
     "    L = 0\n",
     "    for i, X_not_i in enumerate(LOO): #<- per leave-one-out of the data (ouch!)\n",
     "        \n",
@@ -664,7 +677,7 @@
     "        \n",
     "                   data=-X_not_i, #<- dataset minus one sample as given by LOO\n",
     "                   \n",
-    "                   data_predict=-self.data[i, :], #<- REAL dataset from ith point\n",
+    "                   data_predict=-self.data[i, :], #<- REAL dataset, ith point\n",
     "                   \n",
     "                   var_type=self.var_type) #<- 'cccc' or something similar\n",
     "        \n",
@@ -685,10 +698,10 @@
     "## What happens inside gkpe?\n",
     "---\n",
     "\n",
-    "* Both the CDF and PDF are imated with a gpke. They just use a different kernel.\n",
+    "* Both the CDF and PDF are estimated with a gpke. They just use a different kernel.\n",
     "\n",
     "\n",
-    "* All the kernels implementations are [here](https://github.com/statsmodels/statsmodels/blob/master/statsmodels/nonparametric/kernels.py)."
+    "* All the kernel implementations are [here](https://github.com/statsmodels/statsmodels/blob/master/statsmodels/nonparametric/kernels.py)."
    ]
   },
   {
@@ -713,7 +726,7 @@
     "        Kval[:, ii] = func(bw[ii], data[:, ii], data_predict[ii]) \n",
     "\n",
     "    iscontinuous = np.array([c == 'c' for c in var_type])\n",
-    "    dens = Kval.prod(axis=1) / np.prod(bw[iscontinuous])\n",
+    "    dens = Kval.prod(axis=1) / np.prod(bw[iscontinuous]) #<- Ta-da, kernel products.\n",
     "    if tosum:\n",
     "        return dens.sum(axis=0)\n",
     "    else:\n",
@@ -722,7 +735,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# What did I do?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Groundwork:\n",
     "---\n",
@@ -739,12 +767,22 @@
     "* Counting how many violations of the bound were made by a CDF.\n",
     "\n",
     "\n",
-    "* Measuring the size of the violation at each point (diff between the point of the CDF in which the violation happened, and the bound that was broken)"
+    "* Measuring the size of the violation at each point (diff between the point of the CDF in which the violation happened, and the bound that was broken)\n",
+    "\n",
+    "\n",
+    "* Generating experiments\n",
+    "\n",
+    "\n",
+    "* Massaging outputs of the profiler"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Then...\n",
     "---\n",
@@ -770,33 +808,51 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Then more...\n",
+    "---\n",
+    "\n",
+    "#### Hijacked loo_likelihood() to make my own method in which violations are used to guide the optimization algorithm.\n",
+    "\n",
+    "* Tried feeding number of violations to the algorithm. \n",
+    "\n",
+    "    * The algorithm got lost.\n",
+    "    \n",
+    "    * Maybe too little information?\n",
+    "        \n",
+    "   \n",
+    "* Tried feeding the sum of the size of all violations. \n",
+    "\n",
+    "    * It kinda worked but the final steps of the algorithm were unstable.\n",
+    "    \n",
+    "    * Can we make it a bit more informative?\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "## And then, some more\n",
-    "---\n",
-    "\n",
-    "#### Hijacked loo_likelihood() to make my own method in which violations are used to guide the optimization algorithm.\n",
-    "\n",
-    "* Tried feeding number of violations to the algorithm. \n",
-    "    * The algorithm got lost.\n",
-    "    * Maybe too little information?\n",
-    "        \n",
-    "   \n",
-    "* Tried feeding the sum of the size of all violations. \n",
-    "    * It kinda worked but the final steps of the algorithm were unstable.\n",
-    "    * Can we make it a bit more informative?\n",
-    "        \n",
-    "        \n",
+    "## And then, some more.\n",
+    "---        \n",
     "* Tried feeding a weighted sum of the size of all violations.\n",
+    "\n",
     "    * The weights were the size of the bound at each violation point.\n",
+    "\n",
     "    * The rationale is that a violation at a narrow point should be punished more than a violation at an already wide point.\n",
+    "    \n",
     "    * It still takes between 20% to 200% more time than cv_ml when it should be at least an order of magnitude faster (cdf estimation is faster than leave-one-out)\n",
-    "    * **Gee, I wonder if I have a bug somewhere?**\n",
-    "        * Yup, I actually had a bug."
+    "    \n",
+    "    * **Gee, I wonder if I have a bug somewhere?**"
    ]
   },
   {
@@ -807,7 +863,19 @@
     }
    },
    "source": [
-    "## Extra!\n",
+    "# Yup, I actually had a bug.\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## What was the bug?\n",
     "---\n",
     "\n",
     "* While making this presentation I realized I had a bug.\n",
@@ -1227,7 +1295,7 @@
     "\n",
     "* See if this makes reasonable kernels in the 2d case. \n",
     "\n",
-    "* Interactive graphics for plotting the bounds and the cdfs."
+    "* Interactive graphics for plotting the bounds and the cdfs in the 2d case."
    ]
   },
   {
@@ -1245,6 +1313,15 @@
     "\n",
     "<img src=\"https://media.giphy.com/media/4uraUi810KSMo/giphy.gif\">"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
