--- a/mv_kecdf_frechet.ipynb
+++ b/mv_kecdf_frechet.ipynb
@@ -1218,7 +1218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### And this is profiling info was collected\n",
+    "### And this is how profiling info was collected\n",
     "---\n",
     "\n",
     "The python profiler is a bit unfriendly, so maybe this code could be useful as a snippet?\n",
@@ -1302,7 +1302,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
