--- a/Frechet.ipynb
+++ b/Frechet.ipynb
@@ -15,6 +15,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create and plot some distributions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -78,6 +85,13 @@
     "    ax.set_zlabel('Top Frechet')\n",
     "    plt.savefig(f'../{figname}.png', dpi=100, tight_layout=True)\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualise bounds for combinations of distributions"
    ]
   },
   {
@@ -181,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
